--- a/arch/arm64/configs/X00T_defconfig
+++ b/arch/arm64/configs/X00T_defconfig
@@ -723,3 +723,5 @@ CONFIG_AINUR_DTS_HW=y
 CONFIG_DEVFREQ_BOOST=y
 CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
 CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=2086
+CONFIG_BLOCK_UNWANTED_APPS=y
+CONFIG_BLOCK_UNWANTED_FILES=y
