--- a/arch/arm64/configs/X00T_defconfig
+++ b/arch/arm64/configs/X00T_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Equinox-v1.4T"
+CONFIG_LOCALVERSION="-Equinox-v1.4"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_AUDIT is not set
 CONFIG_NO_HZ=y
